welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:3: error: not found: value Maths
    return 2* Maths.abs(n-21)
              ^diff21:5: error: not found: value Maths
    return Maths.abs(n-21)
           ^